Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97440

Qt Multimedia does not compile without EGL 1.5 on Linux platform

    XMLWordPrintable

Details

    • Linux/X11, Linux/Yocto
    • 2fb1985c6be885d4c2443eca5e61a5006757d68d (qt/qtmultimedia/dev) 2635fcdc8ca0c5ebdf34fd5ce67a6cf255933bb0 (qt/qtmultimedia/6.2)

    Description

      Qt Multimedia 6.2.0 has a dependency to eglCreateImage() which is available only if the EGL version is 1.5 or greater. It should be possible to make it fall back to using older version of EGL or to work without EGL altogher if needed.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            laknoll Lars Knoll
            tuomas.vaarala Tuomas Vaarala
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes