Compile on systems that do not support eglCreateImage

Systems that do not support eglCreateImage also can't support DMA
buffer transfers of decoded video, so that's the feature we want
to test for and disable if eglCreateImage is not found.

Fixes: QTBUG-97440
Change-Id: Ie65a21407aae74bc1b4325d3ffc5b833f34d3b2a
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit 2fb1985c6be885d4c2443eca5e61a5006757d68d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>